Added blackout on 3-finger tap

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -377,7 +377,7 @@
                         <div class="shortcut"><kbd>G</kbd> <span>Last image</span></div>
                         <div class="shortcut"><kbd>Space</kbd> <span>Toggle menu</span></div>
                         <div class="shortcut"><kbd>e</kbd> <span>Open edit mode</span></div>
-                        <div class="shortcut"><kbd>b</kbd> <span>Blackout screen</span></div>
+                        <div class="shortcut"><kbd>b</kbd> / <kbd>3-finger tap</kbd> <span>Blackout screen</span></div>
                         <div class="shortcut"><kbd>Delete</kbd> / <kbd>x</kbd> <span>Delete image</span></div>
                         <div class="shortcut"><kbd>q</kbd> / <kbd>Esc</kbd> <span>Back to gallery</span></div>
                         <div class="shortcut"><kbd>?</kbd> <span>Show this help</span></div>
